objects/vlocity_ins__CalculationMatrix__c.object
<CustomObject>
    <description>Defines a flexible table (or &quot;matrix&quot;) that enables fast lookup based on one or more input dimensions and returns one or more corresponding output values. The input and output dimensions are entirely flexible and configured in the definition of the matrix without having to change the underlying object model. Vlocity Calculation Matrices can be changed by authorized administrators who do not have the &quot;Customize Application&quot; permission and without writing Apex code.</description>
    <fields>
        <fullName>vlocity_ins__Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__GlobalKey__c</fullName>
        <description>The globally unique identifier of the Matrix. Used to identify the Matrix across Salesforce instances.</description>
        <externalId>true</externalId>
        <label>Global Key</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__GroupKey__c</fullName>
        <label>Group Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__SubGroupKey__c</fullName>
        <label>Sub Group Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__VersionsWithLongOutputCount__c</fullName>
        <label>Versions With Long Output Count</label>
        <summaryFilterItems>
            <field>vlocity_ins__CalculationMatrixVersion__c.vlocity_ins__UseLongOutput__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>vlocity_ins__CalculationMatrixVersion__c.vlocity_ins__CalculationMatrixId__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__WildcardColumn__c</fullName>
        <label>Wildcard Column</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__WildcardValue__c</fullName>
        <label>Wildcard Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Vlocity Calculation Matrix</label>
    <listViews>
        <fullName>vlocity_ins__All</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>program rates</value>
        </filters>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Calculation Matrix Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Vlocity Calculation Matrices</pluralLabel>
    <recordTypes>
        <fullName>vlocity_ins__Grouped</fullName>
        <active>true</active>
        <label>Grouped</label>
    </recordTypes>
    <recordTypes>
        <fullName>vlocity_ins__RowVersioned</fullName>
        <active>true</active>
        <label>Row-Versioned</label>
    </recordTypes>
    <recordTypes>
        <fullName>vlocity_ins__Standard</fullName>
        <active>true</active>
        <label>Standard</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>